<resources>
    <string name="app_name">FormPayCard</string>
    <string name="tx_titulo">Pago con tarjeta</string>
    <string name="nombre">Nombre</string>
    <string name="num_tarjeta">Número de tarjeta</string>
    <string name="et_num_tarjeta">0000 0000 0000 0000</string>
    <string name="total_a_pagar">Total a pagar:</string>
    <string name="tipo_tarjeta">Tipo de tarjeta</string>
    <string name="fecha_expiracion">Fecha de Expiración</string>
    <string name="hint_mes">MM</string>
    <string name="hint_anio">AA</string>
    <string name="cvv">CVV</string>
    <string name="hint_cvv">000</string>
    <string name="correo">Correo Electrónico</string>
    <string name="hint_correo">ejemplo@correo.com</string>
    <string name="pagar">Pagar</string>
    <string name="nombre_full">Nombre Apellido Apellido</string>
    <string name="pago">$ %s</string>
    <string name="r_nombre">" %s"</string>
    <string name="r_tarjeta">%s</string>
    <string name="r_pago">$ %s</string>
    <string name="res_op_exitosa">¡Operación Exitosa!</string>
    <string name="res_op_fallifa">¡Operación Fallida!</string>
    <string name="valor_requerido">Se requiere el campo</string>
    <string name="ingresa_nombre">Por favor ingresa el nombre</string>
    <string name="ingresa_numtarj">Por favor ingresa el número de tarjeta</string>
    <string name="ingresa_mes">Por favor ingresa el mes de expiración</string>
    <string name="ingresa_anio">Por favor ingresa el año de expiración</string>
    <string name="ingresa_cvv">Por favor ingresa el cvv</string>
    <string name="ingresa_correo">Por favor ingresa el correo </string>
    <string name="ingresa_tipo">Por favor selecciona un tipo</string>
    <string name="resumen_operacion">Resumen de Operación:</string>
    <string name="resumen_cantidad">Cantidad:</string>
    <string name="resumen_nom">Nombre:</string>
    <string name="resumen_tarj">Tarjeta:</string>
    <string name="email_invalido">Email inválido</string>
    <string name="cvv_invalido">CVV inválido</string>
    <string name="tarjeta_invalido">Número inválido</string>
    <string name="mes_invalido">Mes inválido</string>
    <string name="anio_invalido">Año inválido</string>
    <string name="version">Versión 1.0</string>
    <string name="text_mes">MM</string>
    <string name="text_AA">AA</string>
    <string name="divisor_fecha">/</string>
</resources>